# watssabi

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/: openapi.yaml
docs/diagrams/: component_diagram.puml  database_erd.puml  sequence_diagram.puml
infra/ngrok/: ngrok.yml
infra/terraform/: README.md  data_stores.tf  ecr.tf  ecs.tf  locals.tf  networking.tf  outputs.tf  security.tf  variables.tf
src/: main.py
src/api/endpoints/: twilio_webhook.py
src/core/: config.py  logging.py  security.py
src/crud/: repository.py
src/db/: base.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: e6a5b4e3d2c1_initial_migration.py
src/schemas/: twilio.py
src/services/: ai_client.py  conversation_service.py  session_manager.py
tests/: conftest.py
tests/test_api/: test_twilio_webhook.py
tests/test_core/: test_security.py
tests/test_e2e/: test_full_conversation.py
tests/test_services/: test_ai_client.py  test_conversation_service.py  test_session_manager.py
tools/: install.sh  lint.sh  run.sh  test.sh
