[tool.poetry]
name = "watssabi-ai-collector"
version = "0.1.0"
description = "A system to collect information from users via WhatsApp using an AI agent."
authors = ["Watssabi AI Team <dev@watssabi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = {version = "^2.0.30", extras = ["asyncio"]}
psycopg = {version = "^3.1.18", extras = ["binary"]}
alembic = "^1.13.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
twilio = "^8.12.0"
python-multipart = "^0.0.9"
redis = "^5.0.4"
openai = "^1.23.6"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
ruff = "^0.4.4"
black = "^24.4.2"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 88
target-version = ["py311"]